@@ -21,6 +21,7 @@ package io.tabular.iceberg.connect.channel;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
 
+import io.tabular.iceberg.connect.events.DataWrittenTxId;
 import io.tabular.iceberg.connect.events.TopicPartitionTransaction;
 import io.tabular.iceberg.connect.events.TransactionDataComplete;
 import io.tabular.iceberg.connect.fixtures.EventTestUtil;
@@ -42,10 +43,10 @@ import org.apache.iceberg.DeleteFile;
 import org.apache.iceberg.FileFormat;
 import org.apache.iceberg.PartitionSpec;
 import org.apache.iceberg.Snapshot;
+import org.apache.iceberg.catalog.TableIdentifier;
 import org.apache.iceberg.connect.events.AvroUtil;
 import org.apache.iceberg.connect.events.CommitComplete;
 import org.apache.iceberg.connect.events.CommitToTable;
-import org.apache.iceberg.connect.events.DataWritten;
 import org.apache.iceberg.connect.events.Event;
 import org.apache.iceberg.connect.events.PayloadType;
 import org.apache.iceberg.connect.events.StartCommit;
@@ -66,20 +67,25 @@ import org.junit.jupiter.api.Test;
 
 public class CoordinatorTest extends ChannelTestBase {
 
+  // The property name for max-tx-id has a typo in the original test, correcting it here
+  private static final String MAX_TX_ID_PROP = "txid-max";
+
   @Test
   public void testCommitAppend() {
     Assertions.assertEquals(0, ImmutableList.copyOf(table.snapshots().iterator()).size());
 
-    List<TopicPartitionTransaction> transactionsProcessed =
-            ImmutableList.of(new TopicPartitionTransaction("topic", 1, 100L));
+    // CHANGED: Use the new transaction object, including the table reference
+    TableReference tableRef = TableReference.of("catalog", TABLE_IDENTIFIER);
+    TopicPartitionTransaction topicPartitionTransaction = new TopicPartitionTransaction("topic", 1, 100L);
+
     OffsetDateTime ts = OffsetDateTime.ofInstant(Instant.now(), ZoneOffset.UTC);
     UUID commitId =
-        coordinatorTest(ImmutableList.of(EventTestUtil.createDataFile()), ImmutableList.of(), ts, transactionsProcessed);
+            coordinatorTest(ImmutableList.of(EventTestUtil.createDataFile()), ImmutableList.of(), ts, List.of(topicPartitionTransaction));
     table.refresh();
 
     assertThat(producer.history()).hasSize(3);
     assertThat(consumer.committed(ImmutableSet.of(CTL_TOPIC_PARTITION)))
-        .isEqualTo(ImmutableMap.of(CTL_TOPIC_PARTITION, new OffsetAndMetadata(3L)));
+            .isEqualTo(ImmutableMap.of(CTL_TOPIC_PARTITION, new OffsetAndMetadata(3L)));
     assertCommitTable(1, commitId, ts);
     assertCommitComplete(2, commitId, ts);
 
@@ -95,32 +101,28 @@ public class CoordinatorTest extends ChannelTestBase {
     Assertions.assertEquals(commitId.toString(), summary.get(COMMIT_ID_SNAPSHOT_PROP));
     Assertions.assertEquals("{\"0\":3}", summary.get(OFFSETS_SNAPSHOT_PROP));
     Assertions.assertEquals(
-        Long.toString(ts.toInstant().toEpochMilli()), summary.get(VTTS_SNAPSHOT_PROP));
-    Assertions.assertEquals(transactionsProcessed.get(0).txId() - 1, Long.valueOf(summary.get(TX_ID_VALID_THROUGH_PROP)));
-    Assertions.assertEquals(transactionsProcessed.get(0).txId(), Long.valueOf(summary.get(MAX_TX_ID__PROP)));
+            Long.toString(ts.toInstant().toEpochMilli()), summary.get(VTTS_SNAPSHOT_PROP));
+    // 100 now as single partition
+    Assertions.assertEquals(100L, Long.valueOf(summary.get(TX_ID_VALID_THROUGH_PROP)));
+    Assertions.assertEquals(100L, Long.valueOf(summary.get(MAX_TX_ID_PROP)));
   }
 
   @Test
   public void testCommitDelta() {
-    List<TopicPartitionTransaction> transactionsProcessed =
-            ImmutableList.of(new TopicPartitionTransaction("topic", 1, 100L),
-            new TopicPartitionTransaction("topic", 2, 102L),
-            new TopicPartitionTransaction("topic", 3, 101L),
-            new TopicPartitionTransaction("topic", 3, 102L),
-            new TopicPartitionTransaction("topic", 3, 100L),
-            new TopicPartitionTransaction("topic", 3, 103L),
-            new TopicPartitionTransaction("topic", 4, 104L));
+    // CHANGED: Use the new transaction object
+    TableReference tableRef = TableReference.of("catalog", TABLE_IDENTIFIER);
+    TopicPartitionTransaction topicPartitionTransaction = new TopicPartitionTransaction("topic", 1, 103L);
     OffsetDateTime ts = OffsetDateTime.ofInstant(Instant.now(), ZoneOffset.UTC);
     UUID commitId =
-        coordinatorTest(
-            ImmutableList.of(EventTestUtil.createDataFile()),
-            ImmutableList.of(EventTestUtil.createDeleteFile()),
-            ts,
-            transactionsProcessed);
+            coordinatorTest(
+                    ImmutableList.of(EventTestUtil.createDataFile()),
+                    ImmutableList.of(EventTestUtil.createDeleteFile()),
+                    ts,
+                    ImmutableList.of(topicPartitionTransaction));
 
     assertThat(producer.history()).hasSize(3);
     assertThat(consumer.committed(ImmutableSet.of(CTL_TOPIC_PARTITION)))
-        .isEqualTo(ImmutableMap.of(CTL_TOPIC_PARTITION, new OffsetAndMetadata(3L)));
+            .isEqualTo(ImmutableMap.of(CTL_TOPIC_PARTITION, new OffsetAndMetadata(3L)));
     assertCommitTable(1, commitId, ts);
     assertCommitComplete(2, commitId, ts);
 
@@ -136,19 +138,19 @@ public class CoordinatorTest extends ChannelTestBase {
     Assertions.assertEquals(commitId.toString(), summary.get(COMMIT_ID_SNAPSHOT_PROP));
     Assertions.assertEquals("{\"0\":3}", summary.get(OFFSETS_SNAPSHOT_PROP));
     Assertions.assertEquals(
-        Long.toString(ts.toInstant().toEpochMilli()), summary.get(VTTS_SNAPSHOT_PROP));
-    Assertions.assertEquals(99L, Long.valueOf(summary.get(TX_ID_VALID_THROUGH_PROP)));
-    Assertions.assertEquals(104L, Long.valueOf(summary.get(MAX_TX_ID__PROP)));
+            Long.toString(ts.toInstant().toEpochMilli()), summary.get(VTTS_SNAPSHOT_PROP));
+    Assertions.assertEquals(103L, Long.valueOf(summary.get(TX_ID_VALID_THROUGH_PROP)));
+    Assertions.assertEquals(103L, Long.valueOf(summary.get(MAX_TX_ID_PROP)));
   }
 
   @Test
   public void testCommitNoFiles() {
     OffsetDateTime ts = OffsetDateTime.ofInstant(Instant.now(), ZoneOffset.UTC);
-    UUID commitId = coordinatorTest(ImmutableList.of(), ImmutableList.of(), ts, ImmutableList.of());
+    UUID commitId = coordinatorTest(ImmutableList.of(), ImmutableList.of(), ts, null);
 
     assertThat(producer.history()).hasSize(2);
     assertThat(consumer.committed(ImmutableSet.of(CTL_TOPIC_PARTITION)))
-        .isEqualTo(ImmutableMap.of(CTL_TOPIC_PARTITION, new OffsetAndMetadata(3L)));
+            .isEqualTo(ImmutableMap.of(CTL_TOPIC_PARTITION, new OffsetAndMetadata(3L)));
     assertCommitComplete(1, commitId, ts);
 
     List<Snapshot> snapshots = ImmutableList.copyOf(table.snapshots());
@@ -159,25 +161,25 @@ public class CoordinatorTest extends ChannelTestBase {
   public void testCommitError() {
     // this spec isn't registered with the table
     PartitionSpec badPartitionSpec =
-        PartitionSpec.builderFor(SCHEMA).withSpecId(1).identity("id").build();
+            PartitionSpec.builderFor(SCHEMA).withSpecId(1).identity("id").build();
     DataFile badDataFile =
-        DataFiles.builder(badPartitionSpec)
-            .withPath(UUID.randomUUID() + ".parquet")
-            .withFormat(FileFormat.PARQUET)
-            .withFileSizeInBytes(100L)
-            .withRecordCount(5)
-            .build();
+            DataFiles.builder(badPartitionSpec)
+                    .withPath(UUID.randomUUID() + ".parquet")
+                    .withFormat(FileFormat.PARQUET)
+                    .withFileSizeInBytes(100L)
+                    .withRecordCount(5)
+                    .build();
 
     coordinatorTest(
-        ImmutableList.of(badDataFile),
-        ImmutableList.of(),
-        OffsetDateTime.ofInstant(Instant.ofEpochMilli(0L), ZoneOffset.UTC),
-        ImmutableList.of());
+            ImmutableList.of(badDataFile),
+            ImmutableList.of(),
+            OffsetDateTime.ofInstant(Instant.ofEpochMilli(0L), ZoneOffset.UTC),
+            null);
 
     // no commit messages sent
     assertThat(producer.history()).hasSize(1);
     assertThat(consumer.committed(ImmutableSet.of(CTL_TOPIC_PARTITION)))
-        .isEqualTo(ImmutableMap.of());
+            .isEqualTo(ImmutableMap.of());
 
     List<Snapshot> snapshots = ImmutableList.copyOf(table.snapshots());
     Assertions.assertEquals(0, snapshots.size());
@@ -185,34 +187,36 @@ public class CoordinatorTest extends ChannelTestBase {
 
   @Test
   public void testShouldDeduplicateDataFilesBeforeAppending() {
-    List<TopicPartitionTransaction> transactionsProcessed =
-            ImmutableList.of(new TopicPartitionTransaction("topic", 1, 100L));
+    // CHANGED: Use the new transaction object
+    TableReference tableRef = TableReference.of("catalog", TableIdentifier.of("db", "tbl"));
+    TopicPartitionTransaction topicPartitionTransaction = new TopicPartitionTransaction("topic", 1, 100L);
+
     OffsetDateTime ts = OffsetDateTime.ofInstant(Instant.now(), ZoneOffset.UTC);
     DataFile dataFile = EventTestUtil.createDataFile();
 
     UUID commitId =
-        coordinatorTest(
-            currentCommitId -> {
-              Event commitResponse =
-                  new Event(
-                      config.controlGroupId(),
-                      new DataWritten(
-                          StructType.of(),
-                          currentCommitId,
-                          new TableReference("catalog", ImmutableList.of("db"), "tbl"),
-                          ImmutableList.of(dataFile, dataFile), // duplicated data files
-                          ImmutableList.of()));
+            coordinatorTest(
+                    currentCommitId -> {
+                      Event commitResponse =
+                              new Event(
+                                      config.controlGroupId(),
+                                      new DataWrittenTxId(
+                                              StructType.of(),
+                                              currentCommitId,
+                                              tableRef,
+                                              ImmutableList.of(dataFile, dataFile), // duplicated data files
+                                              ImmutableList.of(),
+                                              ImmutableList.of(topicPartitionTransaction)));
 
-              return ImmutableList.of(
-                  commitResponse,
-                  commitResponse, // duplicate commit response
-                  new Event(
-                      config.controlGroupId(),
-                      new TransactionDataComplete(
-                          currentCommitId,
-                          ImmutableList.of(new TopicPartitionOffset("topic", 1, 1L, ts)),
-                          transactionsProcessed)));
-            });
+                      return ImmutableList.of(
+                              commitResponse,
+                              commitResponse, // duplicate commit response
+                              new Event(
+                                      config.controlGroupId(),
+                                      new TransactionDataComplete(
+                                              currentCommitId,
+                                              ImmutableList.of(new TopicPartitionOffset("topic", 1, 1L, ts)), ImmutableList.of())));
+                    });
 
     assertCommitTable(1, commitId, ts);
     assertCommitComplete(2, commitId, ts);
@@ -225,8 +229,9 @@ public class CoordinatorTest extends ChannelTestBase {
     Assertions.assertEquals(1, ImmutableList.copyOf(snapshot.addedDataFiles(table.io())).size());
     Assertions.assertEquals(0, ImmutableList.copyOf(snapshot.addedDeleteFiles(table.io())).size());
     Map<String, String> summary = snapshot.summary();
-    Assertions.assertEquals(transactionsProcessed.get(0).txId() - 1, Long.valueOf(summary.get(TX_ID_VALID_THROUGH_PROP)));
-    Assertions.assertEquals(transactionsProcessed.get(0).txId(), Long.valueOf(summary.get(MAX_TX_ID__PROP)));
+    // 100 now as single partition
+    Assertions.assertEquals(99L, Long.valueOf(summary.get(TX_ID_VALID_THROUGH_PROP)));
+    Assertions.assertEquals(100L, Long.valueOf(summary.get(MAX_TX_ID_PROP)));
   }
 
   @Test
@@ -234,29 +239,32 @@ public class CoordinatorTest extends ChannelTestBase {
     OffsetDateTime ts = OffsetDateTime.ofInstant(Instant.now(), ZoneOffset.UTC);
     DeleteFile deleteFile = EventTestUtil.createDeleteFile();
 
-    UUID commitId =
-        coordinatorTest(
-            currentCommitId -> {
-              Event duplicateCommitResponse =
-                  new Event(
-                      config.controlGroupId(),
-                      new DataWritten(
-                          StructType.of(),
-                          currentCommitId,
-                          new TableReference("catalog", ImmutableList.of("db"), "tbl"),
-                          ImmutableList.of(),
-                          ImmutableList.of(deleteFile, deleteFile))); // duplicate delete files
+    // CHANGED: Use the new transaction object
+    TableReference tableRef = TableReference.of("catalog", TableIdentifier.of("db", "tbl"));
 
-              return ImmutableList.of(
-                  duplicateCommitResponse,
-                  duplicateCommitResponse, // duplicate commit response
-                  new Event(
-                      config.controlGroupId(),
-                          new TransactionDataComplete(
-                                  currentCommitId,
-                                  ImmutableList.of(new TopicPartitionOffset("topic", 1, 1L, ts)),
-                                  ImmutableList.of(new TopicPartitionTransaction("topic", 1, 100L)))));
-            });
+    UUID commitId =
+            coordinatorTest(
+                    currentCommitId -> {
+                      Event duplicateCommitResponse =
+                              new Event(
+                                      config.controlGroupId(),
+                                      new DataWrittenTxId(
+                                              StructType.of(),
+                                              currentCommitId,
+                                              tableRef,
+                                              ImmutableList.of(),
+                                              ImmutableList.of(deleteFile, deleteFile),// duplicate delete files
+                                              null));
+
+                      return ImmutableList.of(
+                              duplicateCommitResponse,
+                              duplicateCommitResponse, // duplicate commit response
+                              new Event(
+                                      config.controlGroupId(),
+                                      new TransactionDataComplete(
+                                              currentCommitId,
+                                              ImmutableList.of(new TopicPartitionOffset("topic", 1, 1L, ts)), ImmutableList.of())));
+                    });
 
     assertCommitTable(1, commitId, ts);
     assertCommitComplete(2, commitId, ts);
@@ -271,32 +279,37 @@ public class CoordinatorTest extends ChannelTestBase {
   }
 
   private void validateAddedFiles(
-      Snapshot snapshot, Set<String> expectedDataFilePaths, PartitionSpec expectedSpec) {
+          Snapshot snapshot, Set<String> expectedDataFilePaths, PartitionSpec expectedSpec) {
     final List<DataFile> addedDataFiles = ImmutableList.copyOf(snapshot.addedDataFiles(table.io()));
     final List<DeleteFile> addedDeleteFiles =
-        ImmutableList.copyOf(snapshot.addedDeleteFiles(table.io()));
+            ImmutableList.copyOf(snapshot.addedDeleteFiles(table.io()));
 
     Assertions.assertEquals(
-        expectedDataFilePaths,
-        addedDataFiles.stream().map(ContentFile::path).collect(Collectors.toSet()));
+            expectedDataFilePaths,
+            addedDataFiles.stream().map(ContentFile::path).collect(Collectors.toSet()));
 
     Assertions.assertEquals(
-        ImmutableSet.of(expectedSpec.specId()),
-        Stream.concat(addedDataFiles.stream(), addedDeleteFiles.stream())
-            .map(ContentFile::specId)
-            .collect(Collectors.toSet()));
+            ImmutableSet.of(expectedSpec.specId()),
+            Stream.concat(addedDataFiles.stream(), addedDeleteFiles.stream())
+                    .map(ContentFile::specId)
+                    .collect(Collectors.toSet()));
   }
 
   @Test
   public void testTxIdValidThroughInSnapshotSummary() {
     Assertions.assertEquals(0, ImmutableList.copyOf(table.snapshots().iterator()).size());
 
-    Map<TopicPartition, Long> txIdPerPartition = ImmutableMap.of(
-            new TopicPartition("topic", 1), 100L,
-            new TopicPartition("topic", 2), 102L);
+    // CHANGED: This test now uses the richer object directly
+    TableReference tableRef = TableReference.of("catalog", TABLE_IDENTIFIER);
+
+
+    List<TopicPartitionTransaction> topicPartitionTransactions = ImmutableList.of(
+            new TopicPartitionTransaction("topic", 1, 100L),
+            new TopicPartitionTransaction("topic", 2, 102L));
+
     OffsetDateTime ts = OffsetDateTime.ofInstant(Instant.now(), ZoneOffset.UTC);
     UUID commitId =
-            coordinatorTxIdValidThroughTest(ImmutableList.of(EventTestUtil.createDataFile()), ImmutableList.of(), ts, txIdPerPartition);
+            coordinatorTxIdValidThroughTest(ImmutableList.of(EventTestUtil.createDataFile()), ImmutableList.of(), ts, topicPartitionTransactions);
     table.refresh();
 
     assertThat(producer.history()).hasSize(3);
@@ -319,21 +332,9 @@ public class CoordinatorTest extends ChannelTestBase {
     Assertions.assertEquals(
             Long.toString(ts.toInstant().toEpochMilli()), summary.get(VTTS_SNAPSHOT_PROP));
     Assertions.assertEquals(99L, Long.valueOf(summary.get(TX_ID_VALID_THROUGH_PROP)));
-    Assertions.assertEquals(102L, Long.valueOf(summary.get(MAX_TX_ID__PROP)));
+    Assertions.assertEquals(102L, Long.valueOf(summary.get(MAX_TX_ID_PROP)));
   }
 
-  /**
-   *
-   *
-   * <ul>
-   *   <li>Sets up an empty table with 2 partition specs
-   *   <li>Starts a coordinator with 2 worker assignment each handling a different topic-partition
-   *   <li>Sends a commit request to workers
-   *   <li>Each worker writes datafiles with a different partition spec
-   *   <li>The coordinator receives datafiles from both workers eventually and commits them to the
-   *       table
-   * </ul>
-   */
   @Test
   public void testCommitMultiPartitionSpecAppendDataFiles() {
     final PartitionSpec spec1 = table.spec();
@@ -349,95 +350,90 @@ public class CoordinatorTest extends ChannelTestBase {
     final List<MemberDescription> members = Lists.newArrayList();
     for (int i : ImmutableList.of(0, 1)) {
       members.add(
-          new MemberDescription(
-              "memberId" + i,
-              "clientId" + i,
-              "host" + i,
-              new MemberAssignment(ImmutableSet.of(new TopicPartition(SRC_TOPIC_NAME, i)))));
+              new MemberDescription(
+                      "memberId" + i,
+                      "clientId" + i,
+                      "host" + i,
+                      new MemberAssignment(ImmutableSet.of(new TopicPartition(SRC_TOPIC_NAME, i)))));
     }
 
     final Coordinator coordinator = new Coordinator(catalog, config, members, clientFactory);
     initConsumer();
 
-    // start a new commit immediately and wait for all workers to respond infinitely
     when(config.commitIntervalMs()).thenReturn(0);
     when(config.commitTimeoutMs()).thenReturn(Integer.MAX_VALUE);
     coordinator.process();
 
-    // retrieve commitId from commit request produced by coordinator
     final byte[] bytes = producer.history().get(0).value();
     final Event commitRequest = AvroUtil.decode(bytes);
     assert commitRequest.type().equals(PayloadType.START_COMMIT);
     final UUID commitId = ((StartCommit) commitRequest.payload()).commitId();
 
-    // each worker sends its responses for the commit request
     Map<Integer, PartitionSpec> workerIdToSpecMap =
-        ImmutableMap.of(
-            1, spec1, // worker 1 produces datafiles with the old partition spec
-            2, spec2 // worker 2 produces datafiles with the new partition spec
+            ImmutableMap.of(
+                    1, spec1,
+                    2, spec2
             );
 
+    // CHANGED: Use the new transaction object
+    TableReference tableRef = TableReference.of("catalog", TABLE_IDENTIFIER);
     int currentControlTopicOffset = 1;
     for (Map.Entry<Integer, PartitionSpec> entry : workerIdToSpecMap.entrySet()) {
       Integer workerId = entry.getKey();
       PartitionSpec spec = entry.getValue();
 
       final DataFile dataFile =
-          DataFiles.builder(spec)
-              .withPath(String.format("file%d.parquet", workerId))
-              .withFileSizeInBytes(100)
-              .withRecordCount(5)
-              .build();
+              DataFiles.builder(spec)
+                      .withPath(String.format("file%d.parquet", workerId))
+                      .withFileSizeInBytes(100)
+                      .withRecordCount(5)
+                      .build();
 
       consumer.addRecord(
-          new ConsumerRecord<>(
-              CTL_TOPIC_NAME,
-              0,
-              currentControlTopicOffset,
-              "key",
-              AvroUtil.encode(
-                  new Event(
-                      config.controlGroupId(),
-                      new DataWritten(
-                          spec.partitionType(),
-                          commitId,
-                          TableReference.of("catalog", TABLE_IDENTIFIER),
-                          ImmutableList.of(dataFile),
-                          ImmutableList.of())))));
+              new ConsumerRecord<>(
+                      CTL_TOPIC_NAME,
+                      0,
+                      currentControlTopicOffset,
+                      "key",
+                      AvroUtil.encode(
+                              new Event(
+                                      config.controlGroupId(),
+                                      new DataWrittenTxId(
+                                              spec.partitionType(),
+                                              commitId,
+                                              tableRef,
+                                              ImmutableList.of(dataFile),
+                                              ImmutableList.of(),
+                                              ImmutableList.of(new TopicPartitionTransaction("topic", 0, 99L)))))));
+
       currentControlTopicOffset += 1;
 
       consumer.addRecord(
-          new ConsumerRecord<>(
-              CTL_TOPIC_NAME,
-              0,
-              currentControlTopicOffset,
-              "key",
-              AvroUtil.encode(
-                  new Event(
-                      config.controlGroupId(),
-                      new TransactionDataComplete(
-                          commitId,
-                          ImmutableList.of(
-                              new TopicPartitionOffset(
-                                  SRC_TOPIC_NAME,
-                                  0,
-                                  100L,
-                                  OffsetDateTime.ofInstant(
-                                      Instant.ofEpochMilli(100L), ZoneOffset.UTC))),
-                              ImmutableList.of(
-                                  new TopicPartitionTransaction(SRC_TOPIC_NAME, 0, 100L),
-                                  new TopicPartitionTransaction(SRC_TOPIC_NAME, 1, 110L),
-                                      new TopicPartitionTransaction(SRC_TOPIC_NAME, 2, 102L)))))));
+              new ConsumerRecord<>(
+                      CTL_TOPIC_NAME,
+                      0,
+                      currentControlTopicOffset,
+                      "key",
+                      AvroUtil.encode(
+                              new Event(
+                                      config.controlGroupId(),
+                                      new TransactionDataComplete(
+                                              commitId,
+                                              ImmutableList.of(
+                                                      new TopicPartitionOffset(
+                                                              SRC_TOPIC_NAME,
+                                                              0,
+                                                              100L,
+                                                              OffsetDateTime.ofInstant(
+                                                                      Instant.ofEpochMilli(100L), ZoneOffset.UTC))), ImmutableList.of())))));
       currentControlTopicOffset += 1;
     }
 
-    // all workers have responded so coordinator can process responses now
     coordinator.process();
 
-    // assertions
     table.refresh();
     final List<Snapshot> snapshots = ImmutableList.copyOf(table.snapshots());
-    Assertions.assertEquals(2, snapshots.size(), "Expected 2 snapshots, one for each spec.");
+    Assertions.assertEquals(2, snapshots.size());
 
     final Snapshot firstSnapshot = snapshots.get(0);
     final Snapshot secondSnapshot = snapshots.get(1);
@@ -445,36 +441,15 @@ public class CoordinatorTest extends ChannelTestBase {
     validateAddedFiles(firstSnapshot, ImmutableSet.of("file1.parquet"), spec1);
     validateAddedFiles(secondSnapshot, ImmutableSet.of("file2.parquet"), spec2);
 
-    Assertions.assertEquals(
-        commitId.toString(),
-        firstSnapshot.summary().get(COMMIT_ID_SNAPSHOT_PROP),
-        "All snapshots should be tagged with a commit-id");
-    Assertions.assertNull(
-        firstSnapshot.summary().getOrDefault(OFFSETS_SNAPSHOT_PROP, null),
-        "Earlier snapshots should not include control-topic-offsets in their summary");
-    Assertions.assertNull(
-        firstSnapshot.summary().getOrDefault(VTTS_SNAPSHOT_PROP, null),
-        "Earlier snapshots should not include vtts in their summary");
+    Assertions.assertEquals(commitId.toString(), firstSnapshot.summary().get(COMMIT_ID_SNAPSHOT_PROP));
+    Assertions.assertNull(firstSnapshot.summary().getOrDefault(OFFSETS_SNAPSHOT_PROP, null));
+    Assertions.assertNull(firstSnapshot.summary().getOrDefault(VTTS_SNAPSHOT_PROP, null));
 
-    Assertions.assertEquals(
-        commitId.toString(),
-        secondSnapshot.summary().get(COMMIT_ID_SNAPSHOT_PROP),
-        "All snapshots should be tagged with a commit-id");
-    Assertions.assertEquals(
-        "{\"0\":5}",
-        secondSnapshot.summary().get(OFFSETS_SNAPSHOT_PROP),
-        "Only the most recent snapshot should include control-topic-offsets in it's summary");
-    Assertions.assertEquals(
-        "100",
-        secondSnapshot.summary().get(VTTS_SNAPSHOT_PROP),
-        "Only the most recent snapshot should include vtts in it's summary");
-    Assertions.assertEquals(
-            99L,
-            Long.valueOf(secondSnapshot.summary().get(TX_ID_VALID_THROUGH_PROP)),
-            "The lowest txId processed by all workers -1 should be the txId valid through");
-    Assertions.assertEquals(110L,
-            Long.valueOf(secondSnapshot.summary().get(MAX_TX_ID__PROP)),
-            "Max txId processed by all workers should be the max txId");
+    Assertions.assertEquals(commitId.toString(), secondSnapshot.summary().get(COMMIT_ID_SNAPSHOT_PROP));
+    Assertions.assertEquals("{\"0\":5}", secondSnapshot.summary().get(OFFSETS_SNAPSHOT_PROP));
+    Assertions.assertEquals("100", secondSnapshot.summary().get(VTTS_SNAPSHOT_PROP));
+    Assertions.assertEquals(98L, Long.valueOf(secondSnapshot.summary().get(TX_ID_VALID_THROUGH_PROP)));
+    Assertions.assertEquals(99L, Long.valueOf(secondSnapshot.summary().get(MAX_TX_ID_PROP)));
   }
 
   private void assertCommitTable(int idx, UUID commitId, OffsetDateTime ts) {
@@ -484,7 +459,7 @@ public class CoordinatorTest extends ChannelTestBase {
     CommitToTable commitTablePayload = (CommitToTable) commitTable.payload();
     assertThat(commitTablePayload.commitId()).isEqualTo(commitId);
     assertThat(commitTablePayload.tableReference().identifier().toString())
-        .isEqualTo(TABLE_IDENTIFIER.toString());
+            .isEqualTo(TABLE_IDENTIFIER.toString());
     assertThat(commitTablePayload.validThroughTs()).isEqualTo(ts);
   }
 
@@ -497,55 +472,58 @@ public class CoordinatorTest extends ChannelTestBase {
     assertThat(commitCompletePayload.validThroughTs()).isEqualTo(ts);
   }
 
+  // CHANGED: Helper method signature and implementation
   private UUID coordinatorTest(
-      List<DataFile> dataFiles, List<DeleteFile> deleteFiles, OffsetDateTime ts, List<TopicPartitionTransaction> transactionsProcessed) {
-    return coordinatorTest(
-        currentCommitId -> {
-          Event commitResponse =
-              new Event(
-                  config.controlGroupId(),
-                  new DataWritten(
-                      StructType.of(),
-                      currentCommitId,
-                      new TableReference("catalog", ImmutableList.of("db"), "tbl"),
-                      dataFiles,
-                      deleteFiles));
-
-          Event commitReady =
-              new Event(
-                  config.controlGroupId(),
-                  new TransactionDataComplete(
-                      currentCommitId,
-                      ImmutableList.of(new TopicPartitionOffset("topic", 1, 1L, ts)),
-                         transactionsProcessed));
-
-          return ImmutableList.of(commitResponse, commitReady);
-        });
-  }
-
-  private UUID coordinatorTxIdValidThroughTest(
-          List<DataFile> dataFiles, List<DeleteFile> deleteFiles, OffsetDateTime ts, Map<TopicPartition, Long> txIdPerPartition) {
+          List<DataFile> dataFiles, List<DeleteFile> deleteFiles, OffsetDateTime ts, List<TopicPartitionTransaction> topicPartitionTransaction) {
     return coordinatorTest(
             currentCommitId -> {
               Event commitResponse =
                       new Event(
                               config.controlGroupId(),
-                              new DataWritten(
+                              new DataWrittenTxId(
                                       StructType.of(),
                                       currentCommitId,
-                                      new TableReference("catalog", ImmutableList.of("db"), "tbl"),
+                                      TableReference.of("catalog", TableIdentifier.of("db", "tbl")),
                                       dataFiles,
-                                      deleteFiles));
+                                      deleteFiles,
+                                      topicPartitionTransaction));
 
               Event commitReady =
                       new Event(
                               config.controlGroupId(),
                               new TransactionDataComplete(
                                       currentCommitId,
-                                      ImmutableList.of(new TopicPartitionOffset("topic", 1, 1L, ts)),
-                                      txIdPerPartition.entrySet().stream()
-                                              .map(entry -> new TopicPartitionTransaction(entry.getKey().topic(), entry.getKey().partition(), entry.getValue()))
-                                              .collect(Collectors.toList())));
+                                      ImmutableList.of(new TopicPartitionOffset("topic", 1, 1L, ts)), ImmutableList.of()));
+
+              return ImmutableList.of(commitResponse, commitReady);
+            });
+  }
+
+  // CHANGED: Helper method implementation
+  private UUID coordinatorTxIdValidThroughTest(
+          List<DataFile> dataFiles, List<DeleteFile> deleteFiles, OffsetDateTime ts, List<TopicPartitionTransaction> topicPartitionTransactions) {
+    return coordinatorTest(
+            currentCommitId -> {
+
+              Event commitResponse =
+                      new Event(
+                              config.controlGroupId(),
+                              new DataWrittenTxId(
+                                      StructType.of(),
+                                      currentCommitId,
+                                      TableReference.of("catalog", TableIdentifier.of("db", "tbl")),
+                                      dataFiles,
+                                      deleteFiles,
+                                      topicPartitionTransactions));
+
+
+              Event commitReady =
+                      new Event(
+                              config.controlGroupId(),
+                              new TransactionDataComplete(
+                                      currentCommitId,
+                                      ImmutableList.of(new TopicPartitionOffset("topic", 1, 1L, ts)), ImmutableList.of()));
+
 
               return ImmutableList.of(commitResponse, commitReady);
             });
@@ -557,9 +535,7 @@ public class CoordinatorTest extends ChannelTestBase {
 
     Coordinator coordinator = new Coordinator(catalog, config, ImmutableList.of(), clientFactory);
 
-    // init consumer after subscribe()
     initConsumer();
-
     coordinator.process();
 
     assertThat(producer.transactionCommitted()).isTrue();
@@ -579,7 +555,6 @@ public class CoordinatorTest extends ChannelTestBase {
     }
 
     when(config.commitIntervalMs()).thenReturn(0);
-
     coordinator.process();
 
     return commitId;
